--- a/MyFirstConsoleApplicationSpecFlow/MyFirstConsoleApplicationSpecFlow.csproj
+++ b/MyFirstConsoleApplicationSpecFlow/MyFirstConsoleApplicationSpecFlow.csproj
@@ -35,6 +35,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="ImpromptuInterface, Version=6.2.2.0, Culture=neutral, PublicKeyToken=0b1781c923b2975b, processorArchitecture=MSIL">
+      <HintPath>..\packages\ImpromptuInterface.6.2.2\lib\net40\ImpromptuInterface.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="SpecFlow.Assist.Dynamic, Version=1.2.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\SpecFlow.Assist.Dynamic.1.2.0\lib\45\SpecFlow.Assist.Dynamic.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="TechTalk.SpecFlow, Version=2.1.0.0, Culture=neutral, PublicKeyToken=0778194805d6db41, processorArchitecture=MSIL">
       <HintPath>..\packages\SpecFlow.2.1.0\lib\net45\TechTalk.SpecFlow.dll</HintPath>
@@ -54,24 +63,56 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StepDefinitions\SpecflowSteps.cs" />
-    <Compile Include="Features\Test.feature.cs">
+    <Compile Include="Actions\TestActions.cs" />
+    <Compile Include="Features\StandardTests.feature.cs">
+      <DependentUpon>StandardTests.feature</DependentUpon>
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>Test.feature</DependentUpon>
+    </Compile>
+    <Compile Include="Features\TestBackground.feature.cs">
+      <DependentUpon>TestBackground.feature</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+    </Compile>
+    <Compile Include="Features\TestOutlines.feature.cs">
+      <DependentUpon>TestOutlines.feature</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+    </Compile>
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StepDefinitions\SpecflowSteps.cs" />
+    <Compile Include="Features\TestWithTables.feature.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>TestWithTables.feature</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="packages.config" />
-    <None Include="Features\Test.feature">
+    <None Include="Features\StandardTests.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
-      <LastGenOutput>Test.feature.cs</LastGenOutput>
+      <LastGenOutput>StandardTests.feature.cs</LastGenOutput>
+    </None>
+    <None Include="Features\TestBackground.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>TestBackground.feature.cs</LastGenOutput>
+    </None>
+    <None Include="Features\TestOutlines.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>TestOutlines.feature.cs</LastGenOutput>
+    </None>
+    <None Include="packages.config" />
+    <None Include="Features\TestWithTables.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>TestWithTables.feature.cs</LastGenOutput>
     </None>
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Actions\" />
+    <ProjectReference Include="..\MyFirstConsoleApplication\MyFirstConsoleApplication.csproj">
+      <Project>{6FBBC572-0F1B-4C73-AE3E-BE889AE5BBB2}</Project>
+      <Name>MyFirstConsoleApplication</Name>
+    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
