--- a/MyFirstConsoleApplicationTest/MyFirstConsoleApplicationTest.csproj
+++ b/MyFirstConsoleApplicationTest/MyFirstConsoleApplicationTest.csproj
@@ -50,7 +50,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="UnitTests.cs" />
+    <Compile Include="UnitTests\UnitTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
