Added more tests and EnumUtil

--- a/MyFirstConsoleApplicationSpecFlow/MyFirstConsoleApplicationSpecFlow.csproj
+++ b/MyFirstConsoleApplicationSpecFlow/MyFirstConsoleApplicationSpecFlow.csproj
@@ -84,6 +84,11 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
     </Compile>
+    <Compile Include="Features\TestWithStringVars.feature.cs">
+      <DependentUpon>TestWithStringVars.feature</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StepDefinitions\SpecflowSteps.cs" />
     <Compile Include="Features\TestWithTables.feature.cs">
@@ -109,6 +114,10 @@
     <None Include="Features\TestWithMultilineText.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
       <LastGenOutput>TestWithMultilineText.feature.cs</LastGenOutput>
+    </None>
+    <None Include="Features\TestWithStringVars.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>TestWithStringVars.feature.cs</LastGenOutput>
     </None>
     <None Include="packages.config" />
     <None Include="Features\TestWithTables.feature">
