--- a/MyFirstConsoleApplication/MyFirstConsoleApplication.csproj
+++ b/MyFirstConsoleApplication/MyFirstConsoleApplication.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Grid\Grids.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\EnumUtil.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
